CHANGELOG

June 23rd, 2010
  - Added Order::remove to delete orders (missing functionality)

June 18th, 2010
  - Added SimpleTest autorun to test/shopify_api_test.php [daniellmb]
  - Removed test/index.php

June 17th, 2010
  - Fixed a typo in Webhook
  - Fixed a bug in url_encode_array to make spaces url friendly (converted to %20)

June 7th, 2010
  - Moved the include for shopify_api_config into shopify_api

May 14th, 2010

  Several changes made to the API.

  - Added a public metafield variable for each necessary class to CRUD metafields for that object.
  - To get metafields for the whole shop you can use the metafield variable in the Session class. 
  - Cleaned up some URLs passed to sendToAPI
  - HTTP Code Error Handling is now down in the miniCURL class
  - If there is an HTTP Code Error returned the API will die with the content from the Shopify API
  - Removed all references of the FORMAT constant from URLs in sendToAPI calls and instead moved it inside the sendToAPI function.
  - Removed SUCCESS and CREATED constants and instead sendToAPI will check for the right HTTP code based on the request header
  - Test setup made easier
  - Any get method with a cache would return an empty array if cache was true and the cache was empty. If the cache is empty and cache is true, the API will be queried.