@@ -2,6 +2,7 @@ CHANGELOG
 
 June 23rd, 2010
   - Added Order::remove to delete orders (missing functionality)
+  - Added support for private applications. Your application secret is the password for your private application.
 
 June 18th, 2010
   - Added SimpleTest autorun to test/shopify_api_test.php [daniellmb]
